# Depixelizing

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DEPIXELIZER  Makefile  cmake_install.cmake  tester
docs/: README.md
include/myApp/: graph.hpp  image.hpp  spline.hpp
src/: graph.cpp  image.cpp  main.cpp  spline.cpp
tests/: tester.cpp
